--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -7,3 +7,9 @@ add_executable(${NAME} App/Main.cpp)
 target_include_directories(${NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_compile_features(${NAME} PRIVATE cxx_std_20)
 target_link_libraries(${NAME} PRIVATE project_warnings Core)
+
+# Copy all required DLLS for the project
+add_custom_command(TARGET ${NAME} POST_BUILD
+  COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_RUNTIME_DLLS:${NAME}> $<TARGET_FILE_DIR:${NAME}>
+  COMMAND_EXPAND_LISTS
+)
